fix: navbar button animation flicker

--- a/app/components/navbar/navbar-button.module.css
+++ b/app/components/navbar/navbar-button.module.css
@@ -11,10 +11,7 @@
 }
 
 .label {
+  width: 8ch;
+  min-height: 1.8rem;
   display: inline-block;
-}
-
-.letter {
-  display: inline-block;
-  transition: color 0.3s ease;
 }
